[package]
name = "async-http1-lite-demo-smol"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client_with_http_proxy"
path = "src/client_with_http_proxy.rs"

[dependencies]
async-http1-lite = { path = "../..", version = "0.1", features = [] }
futures-lite = "0.1"
async-net = "0.1"
